# NLP_emotional_classification

./: .gitignore  Bert.py  README.md  data_clean.ipynb  love_1000_clean.txt  pyproject.toml  requirements.txt  rmf.py
data/: anger_1000_clean.txt  fear_1000_clean.txt  joy_1000_clean.txt  sad_1000_clean.txt  surprise_1000_clean.txt
scratch/datascience_final/: main.tex  sample.bib
src/emotion_nlp/: __init__.py  __main__.py  data.py  evaluate.py  models.py  preprocess.py  train.py
